guide/.vuepress/styles/search.scss
:root .DocSearch {
	--docsearch-text-color: #fff;
	--docsearch-searchbox-background: var(--blurple-600);
	--docsearch-searchbox-focus-background: var(--blurple-630);

	--docsearch-hit-active-color: var(--docsearch-text-color);

	--docsearch-key-shadow: 0 0 0 1px var(--blurple-560);
}

html.dark .DocSearch {
	--docsearch-key-shadow: 0 0 0 1px var(--blurple-560);
}

.DocSearch {
	&.DocSearch-Button {
		color: var(--text-gray);
		height: unset;
		width: 100%;
		font-size: 1em;
		padding: 14px 12px;
		border-width: 0;
		box-shadow: none;
		border-radius: 0.375rem;

		@media screen and (max-width: 719px) {
			width: unset;
			background-color: unset;
		}

		&:hover {
			background-color: var(--blurple-630);
		}

		&:hover,
		&:active,
		&:focus {
			box-shadow: none;
		}

		.DocSearch-Button-Container {
			.DocSearch-Search-Icon {
				width: 1rem;
				height: 1rem;
			}

			.DocSearch-Button-Placeholder {
				padding: 0 0 0 0.75rem;
			}
		}

		.DocSearch-Button-Key {
			background: unset;
			height: unset;
			top: 0;
			padding-bottom: 0;
		}
	}
}

